text align fixed for mobile

--- a/style.css
+++ b/style.css
@@ -211,6 +211,12 @@ a:hover {
         text-align: center;
     }
   
+    .page-headline {
+    
+        text-align: center;
+        
+    }
+
     .title-img {
         
         transform: rotate(0);
